exports[`<Artists /> should render artists 1`] = `
<div
  className={undefined}>
  <ul
    className={undefined}>
    <li
      className={undefined}>
      <a
        alt="T-Pain"
        className={undefined}
        href="https://open.spotify.com/artist/3aQeKQSyrW4qWr35idm0cy">
        <figure
          className={undefined}>
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "url(https://i.scdn.co/image/e54d88a2ba7ffdac8f6271de0c21d24b20b6a729)",
              }
            } />
          <figcaption
            className={undefined}>
            T-Pain
          </figcaption>
        </figure>
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Artists /> should set no-image url if artists array is empty 1`] = `
<div
  className={undefined}>
  <ul
    className={undefined}>
    <li
      className={undefined}>
      <a
        alt="T-Pain"
        className={undefined}
        href="https://open.spotify.com/artist/3aQeKQSyrW4qWr35idm0cy">
        <figure
          className={undefined}>
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "url([object Object])",
              }
            } />
          <figcaption
            className={undefined}>
            T-Pain
          </figcaption>
        </figure>
      </a>
    </li>
  </ul>
</div>
`;
